version/0.10/_sources/api/_autosummary/ansys.optislang.core.nodes.RootSystem.rst.txt
RootSystem
==========

.. currentmodule:: ansys.optislang.core.nodes

.. autoclass:: RootSystem

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      
      RootSystem.control
      
      
      RootSystem.create_node
      
      
      RootSystem.delete
      
      
      RootSystem.delete_children_nodes
      
      
      RootSystem.evaluate_design
      
      
      RootSystem.exists
      
      
      RootSystem.find_node_by_uid
      
      
      RootSystem.find_nodes_by_name
      
      
      RootSystem.get_ancestors
      
      
      RootSystem.get_connections
      
      
      RootSystem.get_execution_options
      
      
      RootSystem.get_inner_input_slots
      
      
      RootSystem.get_inner_output_slots
      
      
      RootSystem.get_input_slots
      
      
      RootSystem.get_missing_parameters_names
      
      
      RootSystem.get_name
      
      
      RootSystem.get_nodes
      
      
      RootSystem.get_omdb_files
      
      
      RootSystem.get_output_slots
      
      
      RootSystem.get_parent
      
      
      RootSystem.get_parent_name
      
      
      RootSystem.get_property
      
      
      RootSystem.get_reference_design
      
      
      RootSystem.get_registered_files
      
      
      RootSystem.get_result_files
      
      
      RootSystem.get_states_ids
      
      
      RootSystem.get_status
      
      
      RootSystem.get_undefined_parameters_names
      
      
      RootSystem.save_designs_as
      
      
      RootSystem.save_designs_as_csv
      
      
      RootSystem.save_designs_as_json
      
      
      RootSystem.set_execution_options
      
      
      RootSystem.set_property
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      RootSystem.criteria_manager
      RootSystem.design_manager
      RootSystem.parameter_manager
      RootSystem.response_manager
      RootSystem.type
      RootSystem.uid
   
   